--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -318,6 +318,8 @@ scrape_configs:
         - 'kube_daemonset_status_desired_number_scheduled'
         - 'kube_deployment_status_replicas'
         - 'kube_deployment_spec_replicas'
+        - 'kube_pod_info'
+        - 'kube_pod_status_ready'
     static_configs:
       - targets: ['prometheus-platform-cluster.{{PROJECT}}.measurementlab.net:9090']
         labels:
