--- a/config/federation/prometheus/rules.yml
+++ b/config/federation/prometheus/rules.yml
@@ -85,12 +85,12 @@ groups:
   # Machine disk quota utilization, 12 hour estimate. Base 12h estimate on a
   # time range at least 25% of the time forward.
   # Units: B(ytes)
-  - record: node:node_filesystem_used_bytes
+  - record: machine:node_filesystem_used_bytes
     expr: 1 - node_filesystem_avail_bytes{mountpoint="/cache/data"} / node_filesystem_size_bytes{mountpoint="/cache/data"}
   # NOTE: this expression uses the recording rule above. This may add an extra
   # minute to current data, but the time scale of the prediction is much longer.
-  - record: node:node_filesystem_used_bytes:predict_linear3h_12h
-    expr: predict_linear(node:node_filesystem_used_bytes[3h], 12 * 60 * 60)
+  - record: machine:node_filesystem_used_bytes:predict_linear3h_12h
+    expr: predict_linear(machine:node_filesystem_used_bytes[3h], 12 * 60 * 60)
 
 ## Switch SNMP metrics
 #
