--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1206,4 +1206,36 @@ groups:
         bottleneck.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/K8-zAIuik/k8s-master-cluster
 
-# Platform Cluster API server alerts.
+# Platform Hardware alerts
+
+  - alert: PlatformHardware_RamBelowExpected
+    expr: |
+      node_memory_MemTotal_bytes{machine=~"^mlab[1-4].[a-z]{3}[0-9tc]{2}.*"} / 2^20 < 16000
+    for: 1d
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: System RAM is below the expected minimum value.
+      description: All M-Lab machines have at least 16GB of RAM. The quantity
+        of RAM on one or more machines has gone below 16GB, which may indicate
+        a failed RAM module. Log into the machine and double check
+        the hardware and/or system messages.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
+
+  - alert: PlatformHardware_RamAmountChanged
+    expr: |
+      changes(
+        node_memory_MemTotal_bytes{machine=~"^mlab[1-4].[a-z]{3}[0-9tc]{2}.*"}[1d]
+      ) != 0
+    for: 1m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: The amount of reported system RAM changed.
+      description: The amount of RAM in a machine should never change. The
+        reported amount of RAM in one or more machine changed, which may
+        indicate some problem with a RAM module. Log into the machine and
+        double check the hardware and/or system messages.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
