--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -757,6 +757,11 @@ scrape_configs:
           - /bmc-targets/*.json
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
+
+    basic_auth:
+      - username: {{REBOOTAPI_BASIC_AUTH_USER}}
+      - password: {{REBOOTAPI_BASIC_AUTH_PASS}}
+
     # This relabel config is necessary. The relabel config redefines the address
     # to scrape and sets the correct parameters to pass to the scrape target.
     relabel_configs:
@@ -775,13 +780,12 @@ scrape_configs:
       - source_labels: []
         regex: .*
         target_label: __address__
-        replacement: reboot.mlab-sandbox.measurementlab.net:443
+        replacement: reboot.{{PROJECT}}.measurementlab.net:443
 
       - source_labels: []
         regex: .*
         target_label: __metrics_path__
         replacement: /v1/e2e
-
 
   # Scrape config for legacy targets.
   #
