--- a/config/federation/prometheus/rules.yml
+++ b/config/federation/prometheus/rules.yml
@@ -82,8 +82,8 @@ groups:
 #
 # Per-machine successful NDT5 tests counted by the server.
 # Units: requests per minute.
-  - record: machine:ndt_test:rpm2m
-    expr: 60 * sum without(direction) (irate(ndt_test_total{code="200"}[4m]))
+  - record: machine:ndt5_client_test_results:rpm2m
+    expr: 60 * sum without(direction) (irate(ndt5_client_test_results_total{result!="error-without-rate"}[4m]))
   # Per-machine maximum ratio of time spent performing I/O on all devices.
   # Units: none (sec/sec)
   - record: machine:node_disk_io_time_seconds:max2m
@@ -134,8 +134,8 @@ groups:
   - record: candidate_ndt:vdlimit_used_ratio_12h_prediction:90th_quantile_30m
     expr: quantile_over_time(0.9, ndt:vdlimit_used_ratio:predict_linear3h_12h[30m])
   # k8s
-  - record: machine:ndt_test_rpm:90th_quantile_30m
-    expr: quantile_over_time(0.9, machine:ndt_test:rpm2m[30m])
+  - record: machine:ndt5_client_test_results_rpm:90th_quantile_30m
+    expr: quantile_over_time(0.9, machine:ndt5_client_test_results:rpm2m[30m])
   - record: machine:node_disk_io_time_seconds_max:90th_quantile_30m
     expr: quantile_over_time(0.9, machine:node_disk_io_time_seconds:max2m[30m])
   - record: machine:node_filesystem_used_ratio_12h_prediction:90th_quantile_30m
@@ -152,8 +152,8 @@ groups:
   - record: candidate_ndt:vdlimit_used_ratio_12h_prediction:90th_quantile_1h
     expr: quantile_over_time(0.9, ndt:vdlimit_used_ratio:predict_linear3h_12h[1h])
   # k8s
-  - record: machine:ndt_test_rpm:90th_quantile_1h
-    expr: quantile_over_time(0.9, machine:ndt_test:rpm2m[1h])
+  - record: machine:ndt5_client_test_results_rpm:90th_quantile_1h
+    expr: quantile_over_time(0.9, machine:ndt5_client_test_results:rpm2m[1h])
   - record: machine:node_disk_io_time_seconds_max:90th_quantile_1h
     expr: quantile_over_time(0.9, machine:node_disk_io_time_seconds:max2m[1h])
   - record: machine:node_filesystem_used_ratio_12h_prediction:90th_quantile_1h
@@ -170,8 +170,8 @@ groups:
   - record: candidate_ndt:vdlimit_used_ratio_12h_prediction:90th_quantile_2h
     expr: quantile_over_time(0.9, ndt:vdlimit_used_ratio:predict_linear3h_12h[2h])
   # k8s
-  - record: machine:ndt_test_rpm:90th_quantile_2h
-    expr: quantile_over_time(0.9, machine:ndt_test:rpm2m[2h])
+  - record: machine:ndt5_client_test_results_rpm:90th_quantile_2h
+    expr: quantile_over_time(0.9, machine:ndt5_client_test_results:rpm2m[2h])
   - record: machine:node_disk_io_time_seconds_max:90th_quantile_2h
     expr: quantile_over_time(0.9, machine:node_disk_io_time_seconds:max2m[2h])
   - record: machine:node_filesystem_used_ratio_12h_prediction:90th_quantile_2h
@@ -188,8 +188,8 @@ groups:
   - record: candidate_ndt:vdlimit_used_ratio_12h_prediction:90th_quantile_6h
     expr: quantile_over_time(0.9, ndt:vdlimit_used_ratio:predict_linear3h_12h[6h])
   # k8s
-  - record: machine:ndt_test_rpm:90th_quantile_6h
-    expr: quantile_over_time(0.9, machine:ndt_test:rpm2m[6h])
+  - record: machine:ndt5_client_test_results_rpm:90th_quantile_6h
+    expr: quantile_over_time(0.9, machine:ndt5_client_test_results:rpm2m[6h])
   - record: machine:node_disk_io_time_seconds_max:90th_quantile_6h
     expr: quantile_over_time(0.9, machine:node_disk_io_time_seconds:max2m[6h])
   - record: machine:node_filesystem_used_ratio_12h_prediction:90th_quantile_6h
@@ -207,8 +207,8 @@ groups:
   - record: candidate_ndt:vdlimit_used_ratio_12h_prediction:98th_quantile_2h
     expr: quantile_over_time(0.98, ndt:vdlimit_used_ratio:predict_linear3h_12h[2h])
   # k8s
-  - record: machine:ndt_test_rpm:98th_quantile_2h
-    expr: quantile_over_time(0.98, machine:ndt_test:rpm2m[2h])
+  - record: machine:ndt5_client_test_results_rpm:98th_quantile_2h
+    expr: quantile_over_time(0.98, machine:ndt5_client_test_results:rpm2m[2h])
   - record: machine:node_disk_io_time_seconds_max:98th_quantile_2h
     expr: quantile_over_time(0.98, machine:node_disk_io_time_seconds:max2m[2h])
   - record: machine:node_filesystem_used_ratio_12h_prediction:98th_quantile_2h
@@ -225,8 +225,8 @@ groups:
   - record: candidate_ndt:vdlimit_used_ratio_12h_prediction:98th_quantile_6h
     expr: quantile_over_time(0.98, ndt:vdlimit_used_ratio:predict_linear3h_12h[6h])
   # k8s
-  - record: machine:ndt_test_rpm:98th_quantile_6h
-    expr: quantile_over_time(0.98, machine:ndt_test:rpm2m[6h])
+  - record: machine:ndt5_client_test_results_rpm:98th_quantile_6h
+    expr: quantile_over_time(0.98, machine:ndt5_client_test_results:rpm2m[6h])
   - record: machine:node_disk_io_time_seconds_max:98th_quantile_6h
     expr: quantile_over_time(0.98, machine:node_disk_io_time_seconds:max2m[6h])
   - record: machine:node_filesystem_used_ratio_12h_prediction:98th_quantile_6h
